apps/platform/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: engineering-platform
    app.kubernetes.io/version: da72238
  name: frontend
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/part-of: engineering-platform
        app.kubernetes.io/version: da72238
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: ghcr-pull
      securityContext:
        fsGroup: 101
        runAsGroup: 101
        runAsNonRoot: true
        runAsUser: 101
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: frontend
      containers:
        - args:
            - -g
            - daemon off;
          command:
            - nginx
          image: ghcr.io/unif-code/engineering-platform@sha256:21248f11379841f12e27d330ffaa8f2be73b92bcbf3628a1855c41b697a10a5c
          imagePullPolicy: IfNotPresent
          name: frontend
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 10m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 101
            runAsNonRoot: true
            runAsUser: 101
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-config
              readOnly: true
              subPath: default.conf
            - mountPath: /var/cache/nginx
              name: nginx-cache
            - mountPath: /var/run
              name: nginx-run
            - mountPath: /tmp
              name: tmp
      volumes:
        - configMap:
            name: frontend-nginx
          name: nginx-config
        - emptyDir: {}
          name: nginx-cache
        - emptyDir: {}
          name: nginx-run
        - emptyDir: {}
          name: tmp
