apps/platform/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: platform
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: frontend
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: platform
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: backend
  type: ClusterIP
